# nView_release

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  gizmo.h  main.cpp  nurbs.cpp  nurbs.h  render_utils.cpp  render_utils.h
src/: bezier_patch.cpp  bezier_patch.h  bspline.cpp  bspline.h  camera.cpp  camera.h  gizmo.cpp  gizmo.h  main.cpp  nurbs.cpp  nurbs.h  shader.glsl  shader.h
